# wgpu_starter

./: Cargo.toml  README.md  index.html
shaders/: shaders.wgsl
src/: app.rs  lib.rs  main.rs  notes.md  state.rs  utils.rs  vertex.rs
