[package]
name = "wgpu_starter"
version = "0.1.0"
edition = "2021"

[lib]
name = "wgpu_start"
crate-type = ["cdylib", "rlib"]
 
[dependencies]
winit = { version = "0.30.5" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "23.0.1"}
pollster = {version ="0.4.0"}
bytemuck = { version = "1.20.0", features = [ "derive" ] }
image = {version = "0.25.5"}
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "23.0.1", features = ["webgl"]}
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Window",
    "Element",
]}
